[project]
name = "glassflow-ai"
dynamic = ["version"]
description = "GlassFlow SDK — OpenTelemetry-native tracing for AI agents and LLM applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "GlassFlow", email = "hello@glassflow.dev" }]
keywords = [
    "opentelemetry",
    "otel",
    "observability",
    "tracing",
    "llm",
    "agents",
    "genai",
    "glassflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/glassflow/glassflow-python"
Repository = "https://github.com/glassflow/glassflow-python.git"
Issues = "https://github.com/glassflow/glassflow-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/glassflow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/glassflow"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: exercises a real OTLP export over a local HTTP server (slower)",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
